seo update for the site

--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,11 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Aman Pandia | Portfolio</title>
+    <meta
+      name="google-site-verification"
+      content="sFH06aZqNF9Gm6RBG3jFUVAwKl1FKfmXmC5BVRRyZb8"
+    />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
