updates to sections

--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,47 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Aman Pandia's portfolio showcasing projects, skills, and experience in web development. Aman Pandia aka pandiaaman"
     />
+
+    <meta
+      name="keywords"
+      content="Aman Pandia, amanpandia, Pandia, Aman, pandiaaman, portfolio, web developer, projects, skills, experience, HTML, CSS, JavaScript"
+    />
+
+    <!-- Author -->
+    <meta name="author" content="Aman Pandia" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Aman Pandia | Portfolio" />
+    <meta
+      property="og:description"
+      content="Aman Pandia's portfolio showcasing projects, skills, and experience in web development."
+    />
+    <!-- imgur link to edit image https://imgur.com/a/PeGfOXj -->
+    <meta property="og:image" content="https://i.imgur.com/VNiFw6l.png" />
+    <!-- Update this with the actual path to your image -->
+    <meta property="og:url" content="https://www.pandiaaman.com" />
+    <!-- Update this with the actual URL of your website -->
+    <meta property="og:site_name" content="Aman Pandia Portfolio" />
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Aman Pandia - Portfolio" />
+    <meta
+      name="twitter:description"
+      content="Aman Pandia's portfolio showcasing projects, skills, and experience in web development."
+    />
+    <meta name="twitter:image" content="https://i.imgur.com/VNiFw6l.png" />
+    <!-- Update this with the actual path to your image -->
+    <meta name="twitter:site" content="@pandiaaman" />
+    <!-- Update this with your actual Twitter handle -->
+
+    <!-- Canonical Link -->
+    <link rel="canonical" href="https://www.pandiaaman.com" />
+    <!-- Update this with the actual URL of your website -->
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.ico" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
